# artemis

./: .env.example  .gitignore  CHANGELOG.md  OBJECTIVES.md  README.md  pubspec.yaml  pyproject.toml  run_server.py
.claude/: settings.local.json
.github/workflows/: deploy-web.yml
artemis_app/: OBJECTIVES.md  README.md  pubspec.yaml
artemis_app/docs/: ARCHITECTURE.md  DEPLOYMENT.md  artemis-dev-reference.md
artemis_app/ios/Runner/: Info.plist
artemis_app/lib/: main.dart
artemis_app/lib/config/: app_config.dart  env_config.dart  module_config.dart
artemis_app/lib/models/: dashboard_models.dart  models.dart  module.dart  user.dart  widget_data.dart
artemis_app/lib/providers/: auth_provider.dart  dashboard_provider.dart
artemis_app/lib/screens/: home_screen.dart
artemis_app/lib/services/: agent_service.dart  api_service.dart  auth_service.dart  platform_service.dart  voice_service.dart
artemis_app/lib/theme/: rummel_theme.dart
artemis_app/test/: models_test.dart  widget_test.dart
artemis_app/web/: index.html  manifest.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION.md  artemis-architecture.html
examples/: api_usage.sh
flutter_app/: analysis_options.yaml  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/config/: module_config.dart
flutter_app/lib/models/: models.dart
flutter_app/lib/screens/: home_screen.dart
flutter_app/lib/services/: api_service.dart
ios/Runner.xcodeproj/: project.pbxproj
src/artemis/: __init__.py
test/: briefing_models_test.dart  models_test.dart
tests/: test_modules.py
(+31 files in other folders)
